cargo-features = ["edition2024"]
[package]
name = "shreksuke"
version = "4.2.0"
edition = "2024"
[dependencies]
telnet = "0.5.0"
ssh2 = "0.9"
crossbeam-channel = "0.5"
indicatif = "0.16"
clap = "2.33"
ctrlc = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
